# RTLGen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  adder.cpp  adder.hpp  boolexp.hpp  bugfix-autotuner.patch  config.cpp  config.hpp  config.json  config_yosys_booth.json  config_yosys_lowpower_booth.json  development.md  eval_design.py  generate_design.py  main.cpp  mcm.cpp  mcm.hpp  multiplier.cpp  multiplier.hpp  multiplier.v  multiplier_tb.v  plan.md  run_autotuner.py  run_test.sh  setup_design.py  test_adder.cpp  test_mcm.cpp  test_multiplier.cpp
control_plane/: README.md  alembic.ini  daily_operations.md  evaluator_pc_codex_instruction_cp010.md  operator_runbook.md  phase2_baseline.md  phase2_real_ingestion_status.md  pyproject.toml  remote_execution_status.md  remote_operator_workflow.md  remote_worker_l1_proof.md  remote_worker_retry_probe.md  shadow_run_cp010.md  shadow_run_db_native_cycle.md  shadow_run_db_native_real_l1.md  shadow_run_db_native_real_l2.md  systemd_operator_workflow.md
control_plane/archive/: README.md  evaluator_pc_codex_instruction_cp010.md  phase2_baseline.md  phase2_real_ingestion_status.md  remote_execution_status.md  shadow_run_cp010.md  shadow_run_db_native_real_l2.md
control_plane/control_plane/: __init__.py  artifact_policy.py  clock.py  config.py  db.py  ids.py  logging.py
control_plane/control_plane/api/: __init__.py  app.py  deps.py  routes_github.py  routes_health.py  routes_leases.py  routes_operator_control.py  routes_operator_status.py  routes_queue.py  routes_runs.py  routes_workers.py
control_plane/control_plane/cli/: __init__.py  backfill_review_states.py  cancel_run.py  cleanup.py  consume_l1_result.py  consume_l2_result.py  execute_submission.py  export_queue.py  finalize_after_merge.py  generate_l1_sweep.py  generate_l2_campaign.py  import_queue.py  main.py  operate_submission.py  operator_status.py  poll_github.py  prepare_submission.py  process_completions.py  publish_review.py  reconcile_github.py  refresh_blocked_dependents.py  report_failure_issues.py  request_evaluator_refresh.py  run_dev_resolver.py  run_eval_resolver.py  run_scheduler.py  run_worker.py  run_worker_daemon.py  submission_status.py  sync_artifacts.py
control_plane/control_plane/migrations/: README.md  env.py  script.py.mako
control_plane/control_plane/models/: __init__.py  artifacts.py  base.py  enums.py  github_links.py  queue_reconciliations.py  resolver_actions.py  resolver_cases.py  resolver_observations.py  run_events.py  run_index_rows.py  runs.py  task_requests.py  work_items.py  worker_leases.py  worker_machines.py
control_plane/control_plane/schemas/: __init__.py  github.py  leases.py  queue_item.py  runs.py  workers.py
control_plane/control_plane/services/: __init__.py  cleanup_service.py  completion_retry_service.py  completion_service.py  dependency_gate.py  dispatcher_service.py  docs_paths.py  evaluator_refresh_request.py  failure_issue_reporter.py  github_bridge.py  github_poller.py  l1_result_consumer.py  l1_task_generator.py  l2_result_consumer.py  l2_task_generator.py  lease_service.py  operator_status.py  operator_submission.py  proposal_finalizer.py  proposal_scaffold.py  queue_exporter.py  queue_importer.py  reconciliation_service.py  resolver_case_service.py  resolver_detection.py  resolver_dev_daemon.py  resolver_eval_daemon.py  resolver_issue_bridge.py  resolver_policy.py  review_publisher.py  review_state_backfill.py  run_index_exporter.py  run_index_query.py  run_service.py  scheduler.py  source_reconciler.py  source_requirement.py  submission_bridge.py  submission_executor.py  trial_variance.py  (+2 more)
control_plane/control_plane/tests/: test_app_smoke.py  test_artifact_policy.py  test_artifact_stage.py  test_cleanup_service.py  test_cli_generate_l1.py  test_cli_generate_l2.py  test_cli_request_evaluator_refresh.py  test_command_runner.py  test_completion_retry_service.py  test_completion_service.py  test_dependency_gate.py  test_dispatcher_service.py  test_docs_paths.py  test_evaluator_refresh_request.py  test_failure_issue_reporter.py  test_generate_design.py  test_github_poller.py  test_l1_result_consumer.py  test_l1_task_generator.py  test_l2_result_consumer.py  test_l2_task_generator.py  test_leases.py  test_models_smoke.py  test_operator_status.py  test_operator_submission.py  test_process_completions_cli.py  test_proposal_finalizer.py  test_queue_exporter.py  test_queue_importer.py  test_reconciliation.py  test_reconciliation_service.py  test_resolver_case_service.py  test_resolver_detection.py  test_resolver_dev_daemon.py  test_resolver_eval_daemon.py  test_resolver_issue_bridge.py  test_resolver_policy.py  test_review_publisher.py  test_review_state_backfill.py  test_run_block_sweep.py  (+12 more)
control_plane/control_plane/workers/: __init__.py  artifact_stage.py  checkout.py  command_runner.py  executor.py  heartbeat.py
control_plane/scripts/: bootstrap_venv.sh  cleanup.sh  daily_ops.sh  dispatch_ready_items_service.sh  ensure_postgres_db.sh  ensure_service_repo.sh  migrate_postgres.sh  migrate_smoke.sh  operator_status.sh  poll_github_service.sh  process_completions_service.sh  refresh_blocked_dependents_service.sh  remote_l1_proof_evaluator_run.sh  remote_l1_proof_notebook_finalize.sh  remote_l1_proof_notebook_prepare.sh  remote_retry_probe_evaluator_run.sh  remote_retry_probe_notebook_prepare.sh  remote_retry_probe_notebook_verify.sh  report_failure_issues_service.sh  request_evaluator_refresh.sh  restart_api.sh  restart_completion_loop.sh  restart_local_control_plane_daemons.sh  restart_worker_daemon.sh  run_api_service.sh  run_dev_resolver_service.sh  run_eval_resolver_service.sh  run_worker_daemon_service.sh  sql_select.sh
control_plane/shadow_exports/l1_promotions/: l1_auto_submit_acc24_20260312224245.json  l1_auto_submit_acc28_20260313035145.json  (+140 more)
control_plane/systemd/: evaluator-worker.env.example  notebook-completions.env.example  rtlgen-evaluator-resolver.service  rtlgen-evaluator-worker.service  rtlgen-notebook-completions.service  rtlgen-notebook-completions.timer
(+15658 files in other folders)
